# ftpServer

./: .gitignore  CMakeLists.txt  build.bat  build.sh  buildDebug.bat  debug  debug.bat  debug.sh  gdbconfig.txt  run  run.bat  run.sh  runconfig  test.bat
include/: log.h  macros.h  os_common.h  rfc_3659.h  rfc_959.h  sockets.h  stringFunctions.h
os/linux/include/: sockets.h
os/linux/src/: sockets.cpp
os/windows/include/: common.h  sockets.h
os/windows/src/: common.cpp  sockets.cpp
src/: main.cpp  rfc_3659.cpp  rfc_959.cpp  sockets.cpp  stringFunctions.cpp  winmain.cpp
test/: CMakeLists.txt  filebrowse.cpp  main.cpp  test.cpp
